# Osic

./: .eslintrc.cjs  Cargo.toml  LICENSE  Osic.toml  README.md  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1687325981399-90cb32d65bfeb.mjs  vite.config.ts.timestamp-1714975577493-e8bf34e0a0bd2.mjs
src/: App.css  App.tsx  cache.rs  entry-client.tsx  global.css  main.rs  root.tsx  selector.rs  ui.rs  utils.rs  utils.ts  win32.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  gallery.rs  main.rs  monitor.rs  tray.rs  utils.rs  win32.rs
src-tauri/src/core/: cache.rs  display.rs  mod.rs  selector.rs  utils.rs  win32.rs
src/cmd/: context.ts  index.ts  util.ts  utils.ts
src/components/about/: About.tsx
src/components/dropdown/: index.tsx  item.tsx  listbox.tsx  root-inline.tsx  root.tsx  use-select.tsx
src/components/gallery/: Gallery.css  Gallery.tsx  Invoke.ts
src/components/head-row/: index.tsx
src/components/main/: display-selector.css  display-selector.tsx
src/components/main/display/: display-selector.tsx  display-settings.tsx
src/components/monitors/: Monitor.tsx
src/components/qwik-ui/: index.tsx  utils.tsx
src/components/qwik-ui/dropdown/: context.tsx  display-text.tsx  dropdown.css  group-label.tsx  group.tsx  hidden-select.tsx  index.tsx  item-indicator.tsx  item-label.tsx  item.tsx  label.tsx  popover.tsx  root-inline.tsx  root.tsx  trigger.tsx  use-select.tsx
src/components/qwik-ui/popover/: context.tsx  floating.tsx  index.tsx  panel-arrow.tsx  panel-impl.tsx  panel.tsx  popover.css  root.tsx  trigger.tsx  utils.tsx
src/components/sidebar/: Sidebar.css  Sidebar.tsx
src/components/starter/hero/: hero.tsx
src/data/: config.rs  mod.rs  monitor.rs  operation.rs
src/routes/: index.tsx  layout.tsx
