[package]
name = "Osic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
imagesize = "0.12"
image = { version = "0.24", features = ["jpeg", "png"] } 
# winit = "0.27.5"
toml = "0.8.10"
windows = { version = "0.54", features = [
    "implement",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
] }


egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_extras = { version = "0.26.2", features = ["all_loaders"] }

serde = { version = "1", features = ["derive"] }
trayicon = { version = "0.1", features = ["crossbeam-channel"] }
crossbeam = "0.8.2"
rfd = "0.14.0"
