[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [""]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "window-all", "system-tray"] }
windows = { version = "0.54", features = [
    "implement",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",

] }
bincode = "1.3.3"
fastrand = "2.0.1"
image = { version = "0.25.1", features = ["jpeg", "png"] }
imagesize = { version = "*" }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
